@@ -1,8 +1,6 @@
 package com.alex.recursion;
 
-import java.util.Arrays;
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 import java.util.concurrent.ThreadPoolExecutor;
 
 /**
@@ -11,39 +9,39 @@ import java.util.concurrent.ThreadPoolExecutor;
 public class NOutM {
     public static volatile String s = "";
     public static void nOutM(List<Integer> ms, int n) {
-        List<Integer> ns = new LinkedList<>();
+        Deque<Integer> ns = new LinkedList<>();
         nOutM2(ms, 0, ns, n);
     }
 
     // first edition
-    public static void nOutM(List<Integer> ms, int start, List<Integer> ns, int n) {
+    public static void nOutM(List<Integer> ms, int start, Deque<Integer> ns, int n) {
         if (ns.size() == n) {
             System.out.println(Arrays.toString(ns.toArray(new Integer[0])));
             return;
         }
         for (int i = start; i < ms.size(); i++) {
             Integer e = ms.remove(i);
-            ns.add(e);
+            ns.addLast(e);
             nOutM(ms, i, ns, n);
-            ns.remove(ns.size() - 1);
+            ns.removeLast();
             ms.add(i, e);
         }
     }
 
     // optimized
-    public static void nOutM2(List<Integer> ms, int start, List<Integer> ns, int n) {
+    public static void nOutM2(List<Integer> ms, int start, Deque<Integer> ns, int n) {
         if (ns.size() == n - 1) {
             for (int i = start; i < ms.size(); i++) {
                 ns.add(ms.get(i));
                 System.out.println(Arrays.toString(ns.toArray(new Integer[0])));
                 ns.remove(ns.size() - 1);
             }
-            return;
-        }
-        for (int i = start; i <= (ms.size()-(n-ns.size())); i++) {
-            ns.add(ms.remove(i));
-            nOutM(ms, i, ns, n);
-            ms.add(i, ns.remove(ns.size() - 1));
+        } else {
+            for (int i = start; i <= (ms.size() - (n - ns.size())); i++) {
+                ns.addLast(ms.get(i));
+                nOutM(ms, i+1, ns, n);
+                ns.removeLast();
+            }
         }
     }
 
